Updated the event deadline

--- a/src/event/20161103/index.pug
+++ b/src/event/20161103/index.pug
@@ -48,14 +48,14 @@ html
 					p 開場12時15分　開演13時00分　終演14時30分#[br]時間は、多少前後する可能性がございます。あらかじめご了承ください。
 			div.row
 				h2 Attend
-				p 当イベントの参加の応募は#[a(href='https://docs.google.com/forms/d/e/1FAIpQLSdhsFhcFQaQDkBWF94QGkTjJQujRHx8PxnV_y2gB1vYDvhg5g/viewform') こちら]からお願いいたします。
+				p 当イベントの参加応募は終了しました。
 			div.row
 				div.one-half.column
 					h4 参加料
 					p #[span.large-text 無料] (ドリンク等の販売もございません)
 				div.one-half.column
 					h4 スケジュール
-					p お申し込み期間　9月3日（土）〜9月17日（土）23時59分#[br]当選メール発送　9月20日（火）#[br]
+					p #[s お申し込み期間　9月3日（土）〜9月17日（土）23時59分]#[br]当選メール発送　9月20日（火）#[br]
 			div.row
 				h4 注意事項
 				ul
