--- a/event/20161103/index.css
+++ b/event/20161103/index.css
@@ -6,7 +6,8 @@ footer {
   padding: 0.5rem; }
 
 .actor {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   display: block;
   width: 100%; }
 
