--- a/index.css
+++ b/index.css
@@ -1,3 +1,26 @@
-.header {
+[alt='header'] {
+  width: 100%;
   display: block;
-  width: 100%; }
+  margin-bottom: 16px; }
+
+main {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto; }
+  @media (max-width: 960px) {
+    main {
+      width: 100%; } }
+
+.news {
+  max-height: 420px;
+  overflow-y: scroll; }
+
+nav a {
+  text-decoration: none;
+  color: inherit;
+  display: inline-block;
+  padding: 4px 8px;
+  opacity: 0.8; }
+  nav a:hover {
+    opacity: 1;
+    color: inherit; }
