--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,35 @@
-.header {
-	display: block;
+[alt='header'] {
 	width: 100%;
+	display: block;
+	margin-bottom: 16px;
+}
+
+main {
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;
+
+	@media (max-width: 960px) {
+		width: 100%;
+	}
+}
+
+.news {
+	max-height: 420px;
+	overflow-y: scroll;
+}
+
+nav {
+	a {
+		text-decoration: none;
+		color: inherit;
+		display: inline-block;
+		padding: 4px 8px;
+		opacity: 0.8;
+
+		&:hover {
+			opacity: 1;
+			color: inherit;
+		}
+	}
 }
