--- a/index.css
+++ b/index.css
@@ -9,7 +9,8 @@ main {
   margin-right: auto; }
   @media (max-width: 960px) {
     main {
-      width: 100%; } }
+      width: 100%;
+      padding: 0 1rem; } }
 
 .news {
   max-height: 420px;
