Removed the timeline

--- a/src/index.pug
+++ b/src/index.pug
@@ -21,6 +21,8 @@ html
 			ul
 				li
 					a(href='http://koeai.blog.fc2.com/') Blog
+				li
+					a(href='https://twitter.com/koeai_sophia') Twitter
 		img(src='/images/header.jpg' alt='header')
 		main
 			div.row.gutters
@@ -30,15 +32,10 @@ html
 					h3 Contact
 					p サークルについて聴きたいことがありましたら、koeai.sophia(at)gmail.comもしくは#[a(href='https://twitter.com/koeai_sophia') こえあい＠そふぃあ公式Twitter]まで。
 			div.row.gutters
-				div.col.col-6
-					h2 News
+				div.col.col-12
+					h3 News
 					div.news
 						ul
-				div.col.col-6
-					h2 Twitter
-					a.twitter-timeline(href='https://twitter.com/koeai_sophia' data-widget-id='437990586356731904') @koeai_sophia からのツイー
-					script.
-						!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
 		scrip(src='https://cdnjs.cloudflare.com/ajax/libs/kube/6.5.2/js/kube.min.js')
 		script(src='index.js')
