--- a/index.css
+++ b/index.css
@@ -6,15 +6,21 @@
 main {
   width: 90%;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  margin-bottom: 16px; }
   @media (max-width: 960px) {
     main {
       width: 100%;
-      padding: 0 1rem; } }
+      padding: 0 16px; } }
 
 .news {
   max-height: 420px;
   overflow-y: scroll; }
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 nav a {
   text-decoration: none;
