--- a/src/index.scss
+++ b/src/index.scss
@@ -8,10 +8,11 @@ main {
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 16px;
 
 	@media (max-width: 960px) {
 		width: 100%;
-		padding: 0 1rem;
+		padding: 0 16px;
 	}
 }
 
@@ -21,6 +22,10 @@ main {
 }
 
 nav {
+	ul {
+		display: flex;
+	}
+
 	a {
 		text-decoration: none;
 		color: inherit;
