--- a/src/index.pug
+++ b/src/index.pug
@@ -17,12 +17,7 @@ html
 		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/kube/6.5.2/css/kube.css')
 		link(rel='stylesheet' href='index.css')
 	body
-		nav
-			ul
-				li
-					a(href='http://koeai.blog.fc2.com/') Blog
-				li
-					a(href='https://twitter.com/koeai_sophia') Twitter
+		include ../shared/nav.pug
 		img(src='/images/header.jpg' alt='header')
 		main
 			div.row.gutters
