--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import '../shared/util.scss';
+
 [alt='header'] {
 	width: 100%;
 	display: block;
@@ -5,15 +7,7 @@
 }
 
 main {
-	width: 90%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 16px;
-
-	@media (max-width: 960px) {
-		width: 100%;
-		padding: 0 16px;
-	}
+	@include content;
 }
 
 .news {
@@ -22,20 +16,5 @@ main {
 }
 
 nav {
-	ul {
-		display: flex;
-	}
-
-	a {
-		text-decoration: none;
-		color: inherit;
-		display: inline-block;
-		padding: 4px 8px;
-		opacity: 0.8;
-
-		&:hover {
-			opacity: 1;
-			color: inherit;
-		}
-	}
+	@include nav;
 }
