--- a/src/index.pug
+++ b/src/index.pug
@@ -22,13 +22,14 @@ html
 		main
 			div.row.gutters
 				div.col.col-12
-					h2 About
+					h2#about
+						span About
 					p このサークルは上智大学を拠点に活動を行っている声優愛好会です。ソフィア祭に声優さんを招待してイベントを開催することを目標に2013年12月に設立されました。2014年度ソフィア祭では声優・福圓美里さんをお招きして念願のトークショーを開催することが出来ました。来年、再来年と継続して開催していけることを新たな目標に活動しています。
-					h3 Contact
+					h2#contact
+						span Contact
 					p サークルについて聴きたいことがありましたら、koeai.sophia(at)gmail.comもしくは#[a(href='https://twitter.com/koeai_sophia') こえあい＠そふぃあ公式Twitter]まで。
-			div.row.gutters
-				div.col.col-12
-					h3 News
+					h2#news
+						span News
 					div.news
 						ul
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
