--- a/src/event/20151101/index.pug
+++ b/src/event/20151101/index.pug
@@ -15,7 +15,7 @@
 
 		body{
 			background-attachment: fixed;
-			background-image: url('../../images/background-20151101.jpg');
+			background-image: url('/assets/event/20151101/background.jpg');
 			background-size: 100%;
 			background-repeat: no-repeat;
 		}
@@ -144,7 +144,7 @@
 </head>
 <body>
 	<header>
-		<a href='https://koeai.github.io/'><img src="../../images/logo.png" alt="logo"></a>
+		<a href='https://koeai.github.io/'><img src="/assets/event/20151101/logo.png" alt="logo"></a>
 	</header>
 	<div class="wrap">
 		<div class="page" id="about">
