--- a/src/event/20161103/index.pug
+++ b/src/event/20161103/index.pug
@@ -10,7 +10,7 @@ html
 		meta(property='og:site_name' content=title)
 		meta(property="og:description" content=description)
 		meta(property='og:type' content='website')
-		meta(property='og:image' content='/images/icon.jpeg')
+		meta(property='og:image' content='/assets/icon.jpeg')
 		meta(name='twitter:card' content='summary')
 		meta(name='twitter:site' content='@koeai_sophia')
 		meta(name='twitter:title' content=title)
@@ -20,13 +20,13 @@ html
 		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css')
 		link(rel='stylesheet' href='index.css')
 	body
-		img.logo(src='/images/header-20161103.jpg' alt='logo')
+		img.logo(src='/assets/event/20161103/header.jpg' alt='logo')
 		div.container
 			div.row
 				h2 About
 			div.row
 				div.one-half.column
-					img.actor(src='/images/akesaka.jpg' alt='actor')
+					img.actor(src='/assets/event/20161103/guest.jpg' alt='actor')
 				div.one-half.column
 					h4 タイトル
 					p= title
