--- a/src/index.pug
+++ b/src/index.pug
@@ -9,7 +9,7 @@ html
 		meta(property='og:site_name' content=title)
 		meta(property="og:description" content=description)
 		meta(property='og:type' content='website')
-		meta(property='og:image' content='/images/icon.jpeg')
+		meta(property='og:image' content='/assets/icon.jpeg')
 		meta(name='twitter:card' content='summary')
 		meta(name='twitter:site' content='@koeai_sophia')
 		meta(name='twitter:title' content=title)
@@ -18,16 +18,31 @@ html
 		link(rel='stylesheet' href='index.css')
 	body
 		include ../shared/nav.pug
-		img(src='/images/header.jpg' alt='header')
+		img(src='/assets/header.jpg' alt='header')
 		main
 			div.row.gutters
-				div.col.col-12
+				div.col.col-6
 					h2#about
 						span About
 					p このサークルは上智大学を拠点に活動を行っている声優愛好会です。ソフィア祭に声優さんを招待してイベントを開催することを目標に2013年12月に設立されました。2014年度ソフィア祭では声優・福圓美里さんをお招きして念願のトークショーを開催することが出来ました。来年、再来年と継続して開催していけることを新たな目標に活動しています。
 					h2#contact
 						span Contact
 					p サークルについて聴きたいことがありましたら、koeai.sophia(at)gmail.comもしくは#[a(href='https://twitter.com/koeai_sophia') こえあい＠そふぃあ公式Twitter]まで。
+				div.col.col-6
+					h2#event
+						span Event
+					table
+						tbody
+							tr
+								td 2016/11/03
+								td 
+									a(href='event/20161103')
+										img(src='/assets/event20161103.jpg')
+							tr
+								td 2014/11/01
+								td
+									img(src='/assets/event20141101.png')
+				div.col.col-12
 					h2#news
 						span News
 					div.news
