--- a/src/index.pug
+++ b/src/index.pug
@@ -28,11 +28,20 @@ html
 					h2#contact
 						span Contact
 					p サークルについて聴きたいことがありましたら、koeai.sophia(at)gmail.comもしくは#[a(href='https://twitter.com/koeai_sophia') こえあい＠そふぃあ公式Twitter]まで。
+					h2#news
+						span News
+					div.news
+						ul
 				div.col.col-6
 					h2#event
 						span Event
 					table
 						tbody
+							tr
+								td 2017/11/04
+								td
+									a(href='event/20171104')
+										img(src='/assets/event20171104.jpg')
 							tr
 								td 2016/11/03
 								td 
@@ -42,11 +51,6 @@ html
 								td 2014/11/01
 								td
 									img(src='/assets/event20141101.png')
-				div.col.col-12
-					h2#news
-						span News
-					div.news
-						ul
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
 		scrip(src='https://cdnjs.cloudflare.com/ajax/libs/kube/6.5.2/js/kube.min.js')
 		script(src='index.js')
