--- a/src/event/20171104/index.pug
+++ b/src/event/20171104/index.pug
@@ -62,7 +62,7 @@ html
 					p #[span.large-text 無料] (ドリンク等の販売もございません)
 				div.col.col-6
 					h2 スケジュール
-					p お申し込み期間　9月14日(木)～9月28日(土)#[br]結果メール送信　10月1日(日)#[br]座席メール送信　10月9日(月)
+					p お申し込み期間　9月14日(木)～9月28日(木)#[br]結果メール送信　10月1日(日)#[br]座席メール送信　10月9日(月)
 			div
 				h2 注意事項
 				ul
