--- a/src/event/20171104/index.pug
+++ b/src/event/20171104/index.pug
@@ -10,7 +10,7 @@ html
 		meta(property='og:site_name' content=title)
 		meta(property="og:description" content=description)
 		meta(property='og:type' content='website')
-		meta(property='og:image' content='/images/icon.jpeg')
+		meta(property='og:image' content='/assets/icon.jpeg')
 		meta(name='twitter:card' content='summary')
 		meta(name='twitter:site' content='@koeai_sophia')
 		meta(name='twitter:title' content=title)
