--- a/src/event/20151101/index.pug
+++ b/src/event/20151101/index.pug
@@ -2,7 +2,8 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
+	include ../../../shared/meta.pug
+	+meta('西明日香トークショー in ソフィア祭　−あっちゃんとチューニング...しよっ？−', '西明日香トークショー in ソフィア祭　−あっちゃんとチューニング...しよっ？−の特設サイト')
 	<link rel="stylesheet" href="u.css">
 	<title>西明日香トークショー in ソフィア祭　−あっちゃんとチューニング...しよっ？−</title>
 	style.
