--- a/src/event/20161103/index.pug
+++ b/src/event/20161103/index.pug
@@ -1,20 +1,8 @@
-- const title = '明坂聡美トークショーinソフィア祭　〜あけこだよ！in四ツ谷〜';
-- const description = `${title}の特設サイト`;
 doctype html
 html
 	head
-		meta(charset='utf-8')
-		title=title
-		meta(name='viewport' content='width=device-width, initial-scale=1')
-		meta(property='og:title' content='こえあい＠そふぃあ')
-		meta(property='og:site_name' content=title)
-		meta(property="og:description" content=description)
-		meta(property='og:type' content='website')
-		meta(property='og:image' content='/assets/icon.jpeg')
-		meta(name='twitter:card' content='summary')
-		meta(name='twitter:site' content='@koeai_sophia')
-		meta(name='twitter:title' content=title)
-		meta(name='twitter:description' content=description)
+		include ../../../shared/meta.pug
+		+meta('明坂聡美トークショーinソフィア祭　〜あけこだよ！in四ツ谷〜', '明坂聡美トークショーinソフィア祭　〜あけこだよ！in四ツ谷〜の特設サイト')
 		link(href='https://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet')
 		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css')
 		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css')
