--- a/src/event/20171104/index.pug
+++ b/src/event/20171104/index.pug
@@ -1,20 +1,8 @@
-- const title = '五十嵐裕美トークショーinソフィア祭';
-- const description = `${title}の特設サイト`;
 doctype html
 html
 	head
-		meta(charset='utf-8')
-		title=title
-		meta(name='viewport' content='width=device-width, initial-scale=1')
-		meta(property='og:title' content='こえあい＠そふぃあ')
-		meta(property='og:site_name' content=title)
-		meta(property="og:description" content=description)
-		meta(property='og:type' content='website')
-		meta(property='og:image' content='/assets/icon.jpeg')
-		meta(name='twitter:card' content='summary')
-		meta(name='twitter:site' content='@koeai_sophia')
-		meta(name='twitter:title' content=title)
-		meta(name='twitter:description' content=description)
+		include ../../../shared/meta.pug
+		+meta('五十嵐裕美トークショーinソフィア祭', '五十嵐裕美トークショーinソフィア祭の特設サイト')
 		link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:300,400')
 		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/kube/6.5.2/css/kube.min.css')
 		link(rel='stylesheet' href='./index.css')
