--- a/src/event/20161103/index.pug
+++ b/src/event/20161103/index.pug
@@ -1,8 +1,9 @@
+- const title = '明坂聡美トークショー in ソフィア祭　〜あけこだよ！in四ツ谷〜'
 doctype html
 html
 	head
 		include ../../../shared/meta.pug
-		+meta('明坂聡美トークショーinソフィア祭　〜あけこだよ！in四ツ谷〜', '明坂聡美トークショーinソフィア祭　〜あけこだよ！in四ツ谷〜の特設サイト')
+		+meta(title, '明坂聡美トークショー in ソフィア祭　〜あけこだよ！in四ツ谷〜の特設サイト')
 		link(href='https://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet')
 		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css')
 		link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css')
