--- a/src/event/20181104/index.pug
+++ b/src/event/20181104/index.pug
@@ -35,12 +35,12 @@ html
 							img(src='/assets/event/20181104/guest.jpg' alt='sp-actor')
 					h2 出演作品
 					ul
-						li ＴＶアニメ　ゲゲゲの鬼太郎　　犬山まな
-						li 劇場アニメ　君の膵臓をたべたい　　恭子
-						li アイドルマスター　ミリオンライブ！　　所恵美#[br]他、多数出演中
+						li ＴＶアニメ ゲゲゲの鬼太郎　犬山まな
+						li 劇場アニメ 君の膵臓をたべたい　恭子
+						li アイドルマスター ミリオンライブ！　所恵美#[br]他、多数出演中
 
 					h2 開催日時・場所
-					p 2018年11月4日(土)　上智大学四ツ谷キャンパス 11号館704教室
+					p 2018年11月4日(日)　上智大学四ツ谷キャンパス 紀尾井坂ビルB210
 					p 開場12時45分頃　開演13時30分　終演14時40分#[br]時間は多少前後する可能性がございます。予めご了承ください。
 					h2 料金
 					p 無料（ドリンク等の販売もございません）#[br]参加詳細に関しましては#[a(href='#attend') Attend]をご覧ください
