--- a/src/index.pug
+++ b/src/index.pug
@@ -24,8 +24,13 @@ html
 				div.col.col-6
 					h2#event
 						span Event
-					table
+					table.events
 						tbody
+							tr
+								td 2018/11/04
+								td
+									a(href='event/20181104')
+										img(src='/assets/event20181104.jpg')
 							tr
 								td 2017/11/04
 								td
