--- a/src/index.pug
+++ b/src/index.pug
@@ -27,6 +27,11 @@ html
 					table.events
 						tbody
 							tr
+								td 2019/11/02
+								td
+									a(href='event/20191102')
+										img(src='/assets/event20191102.jpg')
+							tr
 								td 2018/11/04
 								td
 									a(href='event/20181104')
