--- a/src/event/20191102/index.pug
+++ b/src/event/20191102/index.pug
@@ -1,4 +1,4 @@
-- const title = '小岩井ことりトークショー～IQ世界上位２％の私が上智大学でも無双するそうですよ？~'
+- const title = '小岩井ことりトークショー～IQ世界上位２％の私が上智大学でも無双するそうですよ？〜'
 doctype html
 html
 	head
@@ -35,7 +35,7 @@ html
 							span.big 小岩井ことり
 							| 
 							a.twitter-follow-button(href='https://twitter.com/koiwai_kotori') Follow @koiwai_kotori
-							img(src='/assets/event/20181104/guest.jpg' alt='sp-actor')
+							img(src='/assets/event/20191102/guest.jpg' alt='sp-actor')
 					h2 プロフィール・出演作品
 					p.
 						声優、作詞家、作曲家。MIDI検定1級、講師資格も所持。
