--- a/src/event/20191102/index.pug
+++ b/src/event/20191102/index.pug
@@ -70,7 +70,7 @@ html
 					li イベントに関して株式会社ピアレスガーベラ様、および上智大学へのお問い合わせはご遠慮ください。 
 					li お客様による撮影、録音などの記録行為は一切お断りさせていただきます。 
 					li 公演中の座席の移動、食事、喫煙、危険物の持ち込みなど、他のお客様にご迷惑となる行為はお断りさせていただきます。 
-					li 演にあたり、小岩井さん宛にお手紙、またはプレゼント等ご用意されるお客様は、受付にてスタッフにお渡しください。イベント終了後に小岩井さんの下にお渡しします。 
+					li 公演にあたり、小岩井さん宛にお手紙、またはプレゼント等ご用意されるお客様は、受付にてスタッフにお渡しください。イベント終了後に小岩井さんの下にお渡しします。 
 					li イベント当日はスタッフの指示に従うようお願いいたします。指示に従わない場合退場していただくことがございます。 
 					li 設備などを破損された場合、実費を請求させていただくことがございます。
 				h1#contact.ha Contact
